@@ -2,6 +2,8 @@ Giraph Change Log
 
 Release 0.70.0 - unreleased
 
+  GIRAPH-92: Need outputformat for just vertex ID and value. (jghoman)
+
   GIRAPH-86: Simplify boolean expressions in ZooKeeperExt::createExt.
   (attilacsordas via jghoman)
 
